[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Freddie"
version = "0.9.4"
description = "FastAPI tools library for building DRF-like viewsets"
authors = [
  {name = "Arseny Gabdullin", email = "a.gabdullin@tinkoff.ru"}
]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"
dependencies = [
  "fastapi >=0.62",
]
readme = "README.md"

[project.urls]
Source = "https://github.com/tinkoffjournal/freddie"

[project.optional-dependencies]
db = [
  "aiopg >= 1.0.0",
  "peewee-async == 0.7.0",
  "peewee == 3.13.3",
]
test = [
  "pytest >=4.0.0",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-randomly",
  "python-dotenv",
  "factory-boy",
  "async-asgi-testclient",
  "mypy",
  "black",
  "isort",
  "flake8",
]
dev = [
  "uvicorn"
]

[tool.flit.module]
name = "freddie"

[tool.black]
target-version = ["py36"]
skip-string-normalization = true
line_length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
combine_as_imports = true
combine_star = true
known_third_party = ["pydantic"]
